fix: cases overflow scroll

--- a/src/scss/sections/_cases.scss
+++ b/src/scss/sections/_cases.scss
@@ -2,7 +2,11 @@
     margin-bottom: 20rem;
 
     @include small-tablet {
-        overflow-x: hidden;
+        overflow-y: hidden;
+
+        &__container {
+            overflow: hidden;
+        }
     }
 
     .promo-page & {
